--- a/index.html
+++ b/index.html
@@ -7,15 +7,11 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <div class="fundo"></div>
-    <div class="blur"></div>
-
-
+<header>
     <div class="titulo">
-        <h1><strong class="melhores__strong">Melhores</strong> <strong class="receita__strong">Receitas</strong></h1>
+    <h1><strong class="melhores__strong">Melhores</strong> <strong class="receita__strong">Receitas</strong></h1>
     </div>
     <button type="button" onclick="location.href ='receitas.html'">AQUI</button>
-    <a href="receitas.html">AQUI</a>
-
 </body>
+</header>
 </html>
