--- a/index.html
+++ b/index.html
@@ -6,16 +6,12 @@
     <title>Receitas</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body>
-    <div class="fundo"></div>
-    <div class="blur"></div>
-
-
+<header>
+    <body>
     <div class="titulo">
-        <h1><strong class="melhores__strong">Melhores</strong> <strong class="receita__strong">Receitas</strong></h1>
+    <h1><strong class="melhores__strong">Melhores</strong> <strong class="receita__strong">Receitas</strong></h1>
     </div>
     <button type="button" onclick="location.href ='receitas.html'">AQUI</button>
-    <a href="receitas.html">AQUI</a>
-
-</body>
+    </body>
+</header>
 </html>
