--- a/receitas.html
+++ b/receitas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,17 +12,17 @@
     </div>
     <div class="box__receita">
         <a href="receitas/receita1.html">
-        <img src="assets/images/receita-1.jpg" alt="Hamburger">
-        <h2>Hamburger</h2>
+        <img src="assets/images/receita-1.jpg" alt="Hambúrguer">
+        <h2>Hambúrguer</h2>
         </a>
     </div>
 
-    <div class="box__receita">
+    <!-- <div class="box__receita">
         <a href="receitas/receita2.html">
         <img src="assets/images/receita-1.jpg" alt="Macarrão">
         <h2>Macarrão</h2>
         </a>
-    </div>
+    </div> -->
 
 </body>
 </html>
